--- a/obsidian/.obsidian/appearance.json
+++ b/obsidian/.obsidian/appearance.json
@@ -2,5 +2,6 @@
   "accentColor": "",
   "cssTheme": "Typewriter",
   "baseFontSize": 15,
-  "theme": "moonstone"
+  "theme": "moonstone",
+  "textFontFamily": ""
 }
